--- a/themes/SuiteP/css/suitep-base/suitepicon.html
+++ b/themes/SuiteP/css/suitep-base/suitepicon.html
@@ -423,6 +423,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-action-norma-43"></i>
+            </span>
+            <br>
+            <span class='label'>action-norma-43</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-action-payments-aggregated"></i>
             </span>
             <br>
@@ -981,19 +990,19 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-admin-oauth2"></i>
+                <i class=" suitepicon-admin-oauth-keys"></i>
             </span>
             <br>
-            <span class='label'>admin-oauth2</span>
+            <span class='label'>admin-oauth-keys</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-admin-oauth-keys"></i>
+                <i class=" suitepicon-admin-oauth2"></i>
             </span>
             <br>
-            <span class='label'>admin-oauth-keys</span>
+            <span class='label'>admin-oauth2</span>
         </div>
 
 
@@ -1503,15 +1512,6 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-module-cases"></i>
-            </span>
-            <br>
-            <span class='label'>module-cases</span>
-        </div>
-
-
-        <div class="preview">
-            <span class="inner">
                 <i class=" suitepicon-module-case-updates"></i>
             </span>
             <br>
@@ -1521,10 +1521,10 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-module-companyc"></i>
+                <i class=" suitepicon-module-cases"></i>
             </span>
             <br>
-            <span class='label'>module-companyc</span>
+            <span class='label'>module-cases</span>
         </div>
 
 
@@ -1534,6 +1534,15 @@
             </span>
             <br>
             <span class='label'>module-company</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-companyc"></i>
+            </span>
+            <br>
+            <span class='label'>module-companyc</span>
         </div>
 
 
@@ -1602,19 +1611,19 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-module-email-marketing2"></i>
+                <i class=" suitepicon-module-email-marketing"></i>
             </span>
             <br>
-            <span class='label'>module-email-marketing2</span>
+            <span class='label'>module-email-marketing</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class=" suitepicon-module-email-marketing"></i>
+                <i class=" suitepicon-module-email-marketing2"></i>
             </span>
             <br>
-            <span class='label'>module-email-marketing</span>
+            <span class='label'>module-email-marketing2</span>
         </div>
 
 
@@ -1998,6 +2007,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-financial-products"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-financial-products</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-followups"></i>
             </span>
             <br>
@@ -2205,6 +2223,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-signature-log"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signature-log</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-signatures"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signatures</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-signers"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signers</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-skills"></i>
             </span>
             <br>
@@ -2227,6 +2272,15 @@
             </span>
             <br>
             <span class='label'>module-stic-training</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-transactions"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-transactions</span>
         </div>
 
 
