--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
@@ -1,48 +1,41 @@
-<form id="wizard-step1-form" class="needs-validation" style="width: 100%">
-  <div class="container">
-    <div class="row">
-      <!-- Name -->
-      <stic-field-text class="col-6" x-model="bean.name" label="LBL_NAME" required></stic-field-text>
+<main class="wizard-main flex-fill d-flex flex-column" x-data="WizardStep2.mainStep2xData();">
+  <form id="wizard-step1-form" class="needs-validation" style="width: 100%">
+    <div class="container">
+      <div class="row">
+        <!-- Name -->
+        <stic-field-text class="col-6" x-model="bean.name" label="LBL_NAME" required></stic-field-text>
 
-      <!-- Assigned user -->
-      <div
-        class="col-6"
-        id="assigned_user"
-        data-label="LBL_ASSIGNED_TO_NAME"
-        data-model-name="bean.assigned_user_name"
-        data-model-id="bean.assigned_user_id"
-        data-module="Users"
-        data-call-back-function="set_wizard_assigned_user"
-        data-field-to-name-array="{'id':'assigned_user_id', 'user_name':'assigned_user_name'}"
-        data-mode="single"
-        x-init="sticControls.fieldPopup($el)"
-      ></div>
-    </div>
+        <!-- Assigned user -->
+        <div
+          class="col-6"
+          id="assigned_user"
+          data-label="LBL_ASSIGNED_TO_NAME"
+          data-model-name="bean.assigned_user_name"
+          data-model-id="bean.assigned_user_id"
+          data-module="Users"
+          data-call-back-function="set_wizard_assigned_user"
+          data-field-to-name-array="{'id':'assigned_user_id', 'user_name':'assigned_user_name'}"
+          data-mode="single"
+          x-init="sticControls.fieldPopup($el)"
+        ></div>
+      </div>
 
-    <div class="row">
-      <!-- Processing mode -->
-      <stic-field-select
-        class="col-6"
-        x-model="bean.processing_mode"
-        label="LBL_PROCESSING_MODE"
-        map="utils.getList('stic_advanced_web_forms_processing_mode_list', false)"
-        map-text="text"
-        map-value="id"
-      ></stic-field-select>
-    </div>
+      <div class="row">
+        <!-- Processing mode -->
+        <stic-field-select
+          class="col-6"
+          x-model="bean.processing_mode"
+          label="LBL_PROCESSING_MODE"
+          map="utils.getList('stic_advanced_web_forms_processing_mode_list', false)"
+          map-text="text"
+          map-value="id"
+        ></stic-field-select>
+      </div>
 
-    <div class="row">
-      <!-- Generate url -->
-      <stic-field-checkbox
-        class="col-6 form-switch"
-        x-model="bean.generate_url"
-        label="LBL_GENERATE_URL"
-      ></stic-field-checkbox>
+      <!-- Description -->
+      <div class="row">
+        <stic-field-textarea class="col-12" x-model="bean.description" label="LBL_DESCRIPTION"></stic-field-textarea>
+      </div>
     </div>
-
-    <!-- Description -->
-    <div class="row">
-      <stic-field-textarea class="col-12" x-model="bean.description" label="LBL_DESCRIPTION"></stic-field-textarea>
-    </div>
-  </div>
-</form>
+  </form>
+</main>
