Refactor email sending logic in SendEmailToAssignedAction and update message handling in FormHtmlGeneratorService. Comment out unused processing mode field in step1.html.

--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
@@ -22,14 +22,14 @@
 
       <div class="row">
         <!-- Processing mode -->
-        <stic-field-select
+        <!-- <stic-field-select
           class="col-6"
           x-model="bean.processing_mode"
           label="LBL_PROCESSING_MODE"
           map="utils.getList('stic_advanced_web_forms_processing_mode_list', false)"
           map-text="text"
           map-value="id"
-        ></stic-field-select>
+        ></stic-field-select> -->
       </div>
 
       <!-- Description -->
