Controlar que el botón de convertir enlaces sea pulsado más de una vez e informar

--- a/custom/modules/Campaigns/WizardMarketing.html
+++ b/custom/modules/Campaigns/WizardMarketing.html
@@ -599,7 +599,7 @@
 					<!-- STIC-Custom 20250423 MHP -  -->
 					<!-- Add the button to convert links into tracking URLs -->
 					<div class="button-group">
-						<input type="button" value="{$MOD.LBL_CONVERT_LINKS_TO_TRACKING_URLS}" onclick="EmailTrackerController('convertLinksInTrackingUrls', '{$CAMPAIGN_ID}');">
+						<input type="button" id="convertLinksInTrackingUrlsButton" value="{$MOD.LBL_CONVERT_LINKS_TO_TRACKING_URLS}" onclick="EmailTrackerController('convertLinksInTrackingUrls', '{$CAMPAIGN_ID}');">
 					</div>
 					<!-- END STIC-Custom -->
 
