--- a/themes/SuiteP/css/suitep-base/suitepicon.html
+++ b/themes/SuiteP/css/suitep-base/suitepicon.html
@@ -423,6 +423,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-action-norma-43"></i>
+            </span>
+            <br>
+            <span class='label'>action-norma-43</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-action-payments-aggregated"></i>
             </span>
             <br>
@@ -1935,6 +1944,24 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-allocation-proposals"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-allocation-proposals</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-allocations"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-allocations</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-assessments"></i>
             </span>
             <br>
@@ -1998,6 +2025,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-financial-products"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-financial-products</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-followups"></i>
             </span>
             <br>
@@ -2056,6 +2092,24 @@
             </span>
             <br>
             <span class='label'>module-stic-journal</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-justification-conditions"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-justification-conditions</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-justifications"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-justifications</span>
         </div>
 
 
@@ -2205,6 +2259,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-signature-log"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signature-log</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-signatures"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signatures</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-signers"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-signers</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-skills"></i>
             </span>
             <br>
@@ -2227,6 +2308,15 @@
             </span>
             <br>
             <span class='label'>module-stic-training</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-transactions"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-transactions</span>
         </div>
 
 
